--- a/first/style.css
+++ b/first/style.css
@@ -1,3 +1,7 @@
+body {
+  background-color: #cdcdcd;
+}
+
 .main-header {
   width: 100%;
   color: black;
@@ -5,6 +9,16 @@
   background-color: blue;
 }
 
-body {
-  background-color: #cdcdcd;
+.main-body {
+  width: 80%;
+  background-color: white;
+  height: 100vh;
+  margin: auto;
+}
+
+.main-footer {
+  width: 80%;
+  margin: auto;
+  background-color: black;
+  height: 15vh;
 }
