--- a/first/style.css
+++ b/first/style.css
@@ -1,17 +1,16 @@
 body {
-  background-color: #cdcdcd;
+  background-color: #cfcfcf;
 }
 
 .main-header {
   width: 100%;
-  color: black;
   height: 25vh;
-  background-color: blue;
+  background-color: #343434;
 }
 
 .main-body {
   width: 80%;
-  background-color: white;
+  background-color: #ebebeb;
   height: 100vh;
   margin: auto;
 }
@@ -19,6 +18,6 @@ body {
 .main-footer {
   width: 80%;
   margin: auto;
-  background-color: black;
+  background-color: #1a1a1a;
   height: 15vh;
 }
