--- a/second/style.css
+++ b/second/style.css
@@ -23,13 +23,16 @@
 }
 
 .image-container {
+  width: 33.33%;
+  height: 20vh;
   background-color: #C30016;
+  position: absolute;
+  bottom: 0px;
 }
 
 .image-container p {
-  height: 20vh;
   margin: auto;
   padding: 10px;
   color: white;
-  align-self: center;
+  text-align: center;
 }
