--- a/second/style.css
+++ b/second/style.css
@@ -31,8 +31,8 @@
 }
 
 .image-container p {
-  margin: auto;
-  padding: 10px;
+  font-size: 20px;
+  line-height: 20vh;
   color: white;
   text-align: center;
 }
