--- a/second/style.css
+++ b/second/style.css
@@ -27,12 +27,14 @@
   height: 20vh;
   background-color: #C30016;
   position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   bottom: 0px;
 }
 
 .image-container p {
   font-size: 20px;
-  line-height: 20vh;
   color: white;
   text-align: center;
 }
